@@ -172,6 +172,15 @@
       www/vicidial/admin.php,
       www/vicidial/help.php: Added pause_max_dispo, fix for issue #1030.
     - extras/mysql_update/mysql-1530.sql: Add changes from Rev. 2922.
+  * Add upstream Rev. 2923:
+    - UPGRADE,
+      agi/agi-VDAD_ALL_inbound.agi,
+      extras/MySQL_AST_CREATE_tables.sql,
+      extras/upgrade_2.14.sql,
+      www/vicidial/admin.php,
+      www/vicidial/help.php: Added NO_READY option for no_agent_no_queue
+        in-group feature, issue #1046.
+    - extras/mysql_update/mysql-1530.sql: Add changes from Rev. 2923.
 
 2.25.23 stable
   [Jörg Frings-Fürst]
